--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "Jeremy Wong <jermspeaks@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "lerna": "^3.22.1"
+    "@babel/core": "^7.12.7",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "lerna": "^3.22.1",
+    "prettier": "^2.2.0"
   }
 }
