--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -6,7 +6,17 @@
   "author": "Jeremy Wong <jermspeaks@gmail.com>",
   "main": "index.js",
   "scripts": {
+    "storybook": "start-storybook -p 6006 -c .storybook",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@storybook/addon-essentials": "^6.1.2",
+    "@storybook/addons": "^6.1.2",
+    "@storybook/react": "^6.1.2",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
+  }
 }
